update xsecs to UL

--- a/xsec-json.ipynb
+++ b/xsec-json.ipynb
@@ -18,6 +18,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "a03be12d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BR_THadronic = 0.665\n",
+    "BR_TLeptonic = 1 - BR_THadronic\n",
+    "\n",
+    "BR_HBB = 0.5809"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "72c279f2",
    "metadata": {},
    "outputs": [],
@@ -26,76 +39,91 @@
     "xs = {}\n",
     "\n",
     "# QCD\n",
-    "xs['QCD_Pt_120to170'] = 0\n",
-    "xs['QCD_Pt_170to300'] = 0\n",
-    "xs['QCD_Pt_300to470'] = 0\n",
-    "xs['QCD_Pt_470to600'] = 0\n",
+    "xs['QCD_HT500to700'] = 3.033e+04\n",
+    "xs['QCD_HT700to1000'] = 6.412e+03\n",
+    "xs['QCD_HT1000to1500'] = 1.118e+03\n",
+    "xs['QCD_HT1500to2000'] = 1.085e+02\n",
+    "xs['QCD_HT2000toInf'] = 2.194e+01\n",
+    "\n",
+    "xs['QCD_Pt_120to170'] = 4.074e+05\n",
+    "xs['QCD_Pt_170to300'] = 1.035e+05\n",
+    "xs['QCD_Pt_300to470'] = 6.833e+03\n",
+    "xs['QCD_Pt_470to600'] = 5.495e+02\n",
     "xs['QCD_Pt_600to800'] = 0\n",
-    "xs['QCD_Pt_800to1000'] = 0\n",
-    "xs['QCD_Pt_1000to1400'] = 0\n",
-    "xs['QCD_Pt_1400to1800'] = 0 \n",
-    "xs['QCD_Pt_1800to2400'] = 0\n",
-    "xs['QCD_Pt_2400to3200'] = 0\n",
-    "xs['QCD_Pt_3200toInf'] = 0\n",
+    "xs['QCD_Pt_800to1000'] = 2.622e+01\n",
+    "xs['QCD_Pt_1000to1400'] = 7.475e+00\n",
+    "xs['QCD_Pt_1400to1800'] = 6.482e-01\n",
+    "xs['QCD_Pt_1800to2400'] = 8.742e-02\n",
+    "xs['QCD_Pt_2400to3200'] = 5.237e-03\n",
+    "xs['QCD_Pt_3200toInf'] = 1.353e-04\n",
     "\n",
     "# TTBar\n",
-    "xs['TTTo2L2Nu'] = 0\n",
-    "xs['TTToHadronic'] = 0\n",
-    "xs['TTToSemiLeptonic'] = 0\n",
-    "xs['TTToSemiLeptonic_ext1'] = 0\n",
+    "# needs BRs\n",
+    "xs['TTTo2L2Nu'] = 6.871e+02 * BR_TLeptonic**2\n",
+    "xs['TTToHadronic'] = 6.871e+02 * BR_THadronic**2\n",
+    "xs['TTToSemiLeptonic'] = 6.871e+02 * 2 * BR_TLeptonic * BR_THadronic\n",
     "\n",
     "# Single Top\n",
-    "xs['ST_t-channel_antitop_4f_InclusiveDecays'] = 0\n",
-    "xs['ST_t-channel_top_4f_InclusiveDecays'] = 0 \n",
-    "xs['ST_tW_antitop_5f_inclusiveDecays'] = 0\n",
-    "xs['ST_tW_top_5f_inclusiveDecays'] = 0\n",
+    "# Needs BRs?\n",
+    "xs['ST_s-channel_4f_leptonDecays'] = 3.549e+00 * BR_TLeptonic\n",
+    "xs['ST_t-channel_antitop_4f_InclusiveDecays'] = 6.793e+01\n",
+    "xs['ST_t-channel_antitop_5f_InclusiveDecays'] = 7.174e+01\n",
+    "xs['ST_t-channel_top_4f_InclusiveDecays'] = 1.134e+02\n",
+    "xs['ST_t-channel_top_5f_InclusiveDecays'] = 1.197e+02\n",
+    "xs['ST_tW_antitop_5f_inclusiveDecays'] = 3.251e+01\n",
+    "xs['ST_tW_antitop_5f_NoFullyHadronicDecays'] = 3.251e+01 * BR_TLeptonic\n",
+    "xs['ST_tW_top_5f_inclusiveDecays'] = 3.245e+01\n",
+    "xs['ST_tW_top_5f_NoFullyHadronicDecays'] = 3.245e+01 * BR_TLeptonic\n",
     "\n",
     "# W+jets W(qq)\n",
-    "xs['WJetsToQQ_HT-400to600'] = 0\n",
-    "xs['WJetsToQQ_HT-600to800'] = 0\n",
-    "xs['WJetsToQQ_HT-800toInf'] = 0  \n",
+    "xs['WJetsToQQ_HT-400to600'] = 2.770e+02 \n",
+    "xs['WJetsToQQ_HT-600to800'] = 5.906e+01 \n",
+    "xs['WJetsToQQ_HT-800toInf'] = 2.875e+01 \n",
     "    \n",
     "# W+jets W(lv)\n",
-    "xs['WJetsToLNu_HT-70To100'] = 0\n",
-    "xs['WJetsToLNu_HT-100To200'] = 0\n",
-    "xs['WJetsToLNu_HT-200To400'] = 0\n",
-    "xs['WJetsToLNu_HT-400To600'] = 0\n",
-    "xs['WJetsToLNu_HT-600To800'] = 0 \n",
-    "xs['WJetsToLNu_HT-800To1200'] = 0\n",
-    "xs['WJetsToLNu_HT-1200To2500'] = 0\n",
-    "xs['WJetsToLNu_HT-2500ToInf'] = 0\n",
+    "xs['WJetsToLNu_HT-70To100'] = 1.270e+03\n",
+    "xs['WJetsToLNu_HT-100To200'] = 1.252e+03 \n",
+    "xs['WJetsToLNu_HT-200To400'] = 3.365e+02 \n",
+    "xs['WJetsToLNu_HT-400To600'] = 4.512e+01 \n",
+    "xs['WJetsToLNu_HT-600To800'] = 1.099e+01 \n",
+    "xs['WJetsToLNu_HT-800To1200'] = 4.938e+00 \n",
+    "xs['WJetsToLNu_HT-1200To2500'] = 1.155e+00 \n",
+    "xs['WJetsToLNu_HT-2500ToInf'] = 2.625e-02 \n",
     "\n",
     "# Z+jets Z(qq)\n",
-    "xs['ZJetsToQQ_HT-400to600'] = 0\n",
-    "xs['ZJetsToQQ_HT-600to800'] = 0\n",
-    "xs['ZJetsToQQ_HT-800toInf'] = 0\n",
+    "xs['ZJetsToQQ_HT-400to600'] = 1.145e+02\n",
+    "xs['ZJetsToQQ_HT-600to800'] = 2.541e+01\n",
+    "xs['ZJetsToQQ_HT-800toInf'] = 1.291e+01\n",
     "        \n",
     "# DY+jets\n",
-    "xs['DYJetsToLL_Pt-50To100'] = 0\n",
-    "xs['DYJetsToLL_Pt-100To250'] = 0\n",
-    "xs['DYJetsToLL_Pt-250To400'] = 0                 \n",
-    "xs['DYJetsToLL_Pt-400To650'] = 0\n",
-    "xs['DYJetsToLL_Pt-650ToInf'] = 0\n",
+    "xs['DYJetsToLL_HT-70to100'] = 1.399e+02\n",
+    "xs['DYJetsToLL_HT-100to200'] = 1.401e+02\n",
+    "xs['DYJetsToLL_HT-200to400'] = 3.835e+01\n",
+    "xs['DYJetsToLL_HT-400to600'] = 5.217e+00\n",
+    "xs['DYJetsToLL_HT-600to800'] = 1.267e+00\n",
+    "xs['DYJetsToLL_HT-800to1200'] = 5.682e-01\n",
+    "xs['DYJetsToLL_HT-1200to2500'] = 1.332e-01\n",
+    "xs['DYJetsToLL_HT-2500toInf'] = 2.978e-03\n",
     "\n",
     "# EWK Z\n",
     "xs['EWKZ_ZToQQ'] = 0\n",
-    "xs['EWKZ_ZToLL'] = 0\n",
-    "xs['EWKZ_ZtoNuNu'] = 0\n",
+    "xs['EWKZ_ZToLL'] = 6.207e+00\n",
+    "xs['EWKZ_ZtoNuNu'] = 1.065e+01\n",
     "\n",
     "# EWK W\n",
     "xs['EWKWminus_WToQQ'] = 0\n",
     "xs['EWKWplus_WToQQ'] = 0\n",
-    "xs['EWKWminus_WToLNu'] = 0\n",
-    "xs['EWKWplus_WToLNu'] = 0\n",
+    "xs['EWKWminus_WToLNu'] = 3.208e+01\n",
+    "xs['EWKWplus_WToLNu'] = 3.909e+01\n",
     "\n",
     "# VV \n",
-    "xs['WW'] = 0\n",
-    "xs['WZ'] = 0\n",
-    "xs['ZZ'] = 0\n",
+    "xs['WW'] = 7.583e+01\n",
+    "xs['WZ'] = 2.756e+01\n",
+    "xs['ZZ'] = 1.214e+01\n",
     "\n",
     "# Higgs\n",
-    "xs['GluGluHToBB_M-125_13TeV_powheg_MINLO_NNLOPS'] = 0\n",
-    "xs['VBFHToBB'] = 0\n",
+    "xs['GluGluHToBB_MINLO'] = 0\n",
+    "xs['VBFHToBB'] = 3.873e+00 * BR_HBB\n",
     "\n",
     "xs['WminusH_HToBB_WToQQ'] = 0\n",
     "xs['WplusH_HToBB_WToQQ'] = 0\n",
@@ -110,7 +138,7 @@
     "xs['ggZH_HToBB_ZToQQ'] = 0\n",
     "xs['ggZH_HToBB_ZToLL'] = 0\n",
     "    \n",
-    "xs['ttHToBB'] = 0\n",
+    "xs['ttHToBB'] = 5.013e-01 * BR_HBB\n",
     "\n",
     "with open('xsec.json', 'w') as outfile:\n",
     "    json.dump(xs, outfile)"
@@ -118,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b10cfd5b",
    "metadata": {},
    "outputs": [],
@@ -137,15 +165,19 @@
     "               'QCD_Pt_2400to3200', \n",
     "               'QCD_Pt_3200toInf']\n",
     "\n",
+    "pmap['QCDHT'] = ['QCD_HT500to700',\n",
+    "                 'QCD_HT700to1000',\n",
+    "                 'QCD_HT1000to1500',\n",
+    "                 'QCD_HT1500to2000',\n",
+    "                 'QCD_HT2000toInf']\n",
+    "\n",
     "pmap['ttbar'] = ['TTTo2L2Nu', \n",
     "                 'TTToHadronic', \n",
     "                 'TTToSemiLeptonic',\n",
     "                 'TTToSemiLeptonic_ext1']\n",
     "\n",
     "pmap['SingleTop'] = ['ST_t-channel_antitop_4f_InclusiveDecays', \n",
-    "                     #'ST_t-channel_antitop_5f_InclusiveDecays', \n",
     "                     'ST_t-channel_top_4f_InclusiveDecays', \n",
-    "                     #'ST_t-channel_top_5f_InclusiveDecays', \n",
     "                     'ST_tW_antitop_5f_inclusiveDecays', \n",
     "                     'ST_tW_top_5f_inclusiveDecays']\n",
     "\n",
@@ -164,11 +196,14 @@
     "pmap['Zjets'] = ['ZJetsToQQ_HT-400to600', \n",
     "                 'ZJetsToQQ_HT-600to800', \n",
     "                 'ZJetsToQQ_HT-800toInf',\n",
-    "                 'DYJetsToLL_Pt-50To100',\n",
-    "                 'DYJetsToLL_Pt-100To250', \n",
-    "                 'DYJetsToLL_Pt-250To400', \n",
-    "                 'DYJetsToLL_Pt-400To650', \n",
-    "                 'DYJetsToLL_Pt-650ToInf']\n",
+    "                 'DYJetsToLL_HT-70To100',\n",
+    "                 'DYJetsToLL_HT-100To200', \n",
+    "                 'DYJetsToLL_HT-200To400', \n",
+    "                 'DYJetsToLL_HT-400To600', \n",
+    "                 'DYJetsToLL_HT-600To800', \n",
+    "                 'DYJetsToLL_HT-800To1200'\n",
+    "                 'DYJetsToLL_HT-1200To2500', \n",
+    "                 'DYJetsToLL_HT-2500ToInf']\n",
     "\n",
     "pmap['VV'] = ['WW', 'WZ', 'ZZ']\n",
     "\n",
@@ -176,7 +211,7 @@
     "\n",
     "pmap['EWKW'] = ['EWKWminus_WToQQ','EWKWplus_WToQQ', 'EWKWminus_WToLNu', 'EWKWplus_WToLNu']\n",
     "\n",
-    "pmap['ggF'] = ['GluGluHToBB_M-125_13TeV_powheg_MINLO_NNLOPS']\n",
+    "pmap['ggF'] = ['GluGluHToBB_MINLO']\n",
     "\n",
     "pmap['VBF'] = ['VBFHToBB']\n",
     "\n",
