--- a/filesets.ipynb
+++ b/filesets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "748ed59f",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "995fe03f",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "07c43f29",
    "metadata": {},
    "outputs": [],
@@ -37,8 +37,12 @@
     "\n",
     "    for i,k in enumerate(keys):\n",
     "        \n",
+    "        filelist_redirector = {}\n",
+    "        for dataset, files in filelist[year][k].items():\n",
+    "            filelist_redirector[dataset] = [\"root://cmsxrootd.fnal.gov/\" + f for f in files]\n",
+    "        \n",
     "        with open('infiles/'+year+'_'+names[i]+'.json', 'w') as outfile:\n",
-    "            json.dump(filelist[year][k], outfile)"
+    "            json.dump(filelist_redirector, outfile)"
    ]
   },
   {
