btag SF for 2016

--- a/filesets.ipynb
+++ b/filesets.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "07c43f29",
    "metadata": {},
    "outputs": [],
@@ -32,8 +32,8 @@
     "mckeys = ['QCD', 'TTbar', 'SingleTop', 'WJetsToQQ', 'WJetsToLNu', 'ZJetsToQQ','DYJetsToLL']\n",
     "names = mckeys + ['JetHTData','SingleMuData']\n",
     "\n",
-    "for year in ['2016','2017','2018']:\n",
-    "    keys = mckeys + ['JetHT'+year, 'SingleMu'+year]\n",
+    "for year in ['2016APV','2016','2017','2018']:\n",
+    "    keys = mckeys + ['JetHT'+year[0:4], 'SingleMu'+year[0:4]]\n",
     "\n",
     "    for i,k in enumerate(keys):\n",
     "        \n",
