--- a/xsec-json.ipynb
+++ b/xsec-json.ipynb
@@ -122,7 +122,7 @@
     "xs['ZZ'] = 1.214e+01\n",
     "\n",
     "# Higgs\n",
-    "xs['GluGluHToBB_MINLO'] = 0\n",
+    "xs['GluGluHToBB_MINLO'] = 4.716e-01 * BR_HBB\n",
     "xs['VBFHToBB'] = 3.873e+00 * BR_HBB\n",
     "\n",
     "xs['WminusH_HToBB_WToQQ'] = 0\n",
