prettier indenting of jsons

--- a/xsec-json.ipynb
+++ b/xsec-json.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "72c279f2",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
     "xs['ttHToBB'] = 5.013e-01 * BR_HBB\n",
     "\n",
     "with open('xsec.json', 'w') as outfile:\n",
-    "    json.dump(xs, outfile)"
+    "    json.dump(xs, outfile, indent=4)"
    ]
   },
   {
@@ -233,7 +233,7 @@
     "pmap['muondata'] = ['SingleMuonData']\n",
     "\n",
     "with open('pmap.json', 'w') as outfile:\n",
-    "    json.dump(pmap, outfile)"
+    "    json.dump(pmap, outfile, indent=4)"
    ]
   }
  ],
