fix btag weights for real this time

--- a/filter-json.ipynb
+++ b/filter-json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "640b6579",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "e6ec75ba",
    "metadata": {},
    "outputs": [],
@@ -42,6 +42,8 @@
     "                              'BadPFMuonDzFilter',\n",
     "                              'eeBadScFilter',\n",
     "                              'ecalBadCalibFilter']}\n",
+    "\n",
+    "metfilters['2016APV'] = metfilters['2016']\n",
     "\n",
     "metfilters['2017'] =  {'data': ['goodVertices',\n",
     "                                'globalSuperTightHalo2016Filter',\n",
@@ -82,8 +84,16 @@
     "                              'ecalBadCalibFilter']}\n",
     "\n",
     "with open('metfilters.json', 'w') as outfile:\n",
-    "    json.dump(metfilters, outfile)"
+    "    json.dump(metfilters, outfile, indent=4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efd6774f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
