--- a/xsec-json.ipynb
+++ b/xsec-json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "640b6579",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "a03be12d",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "72c279f2",
    "metadata": {},
    "outputs": [],
@@ -62,6 +62,7 @@
     "xs['TTTo2L2Nu'] = 6.871e+02 * BR_TLeptonic**2\n",
     "xs['TTToHadronic'] = 6.871e+02 * BR_THadronic**2\n",
     "xs['TTToSemiLeptonic'] = 6.871e+02 * 2 * BR_TLeptonic * BR_THadronic\n",
+    "xs['TTToSemiLeptonic_ext1'] = xs['TTToSemiLeptonic']\n",
     "\n",
     "# Single Top\n",
     "# Needs BRs?\n",
@@ -105,6 +106,12 @@
     "xs['DYJetsToLL_HT-1200to2500'] = 1.332e-01\n",
     "xs['DYJetsToLL_HT-2500toInf'] = 2.978e-03\n",
     "\n",
+    "xs['DYJetsToLL_Pt-50To100'] = 3.941e+02\n",
+    "xs['DYJetsToLL_Pt-100To250'] = 9.442e+01\n",
+    "xs['DYJetsToLL_Pt-250To400'] = 3.651e+00\n",
+    "xs['DYJetsToLL_Pt-400To650'] = 4.986e-01\n",
+    "xs['DYJetsToLL_Pt-650ToInf'] = 4.678e-02\n",
+    "\n",
     "# EWK Z\n",
     "xs['EWKZ_ZToQQ'] = 0\n",
     "xs['EWKZ_ZToLL'] = 6.207e+00\n",
@@ -127,16 +134,16 @@
     "\n",
     "xs['WminusH_HToBB_WToQQ'] = 0\n",
     "xs['WplusH_HToBB_WToQQ'] = 0\n",
-    "xs['WminusH_HToBB_WToLNu'] = 0\n",
-    "xs['WplusH_HToBB_WToLNu'] = 0\n",
+    "xs['WminusH_HToBB_WToLNu'] = 1.770e-01 * BR_HBB\n",
+    "xs['WplusH_HToBB_WToLNu'] = 2.832e-01 * BR_HBB\n",
     "\n",
-    "xs['ZH_HToBB_ZToQQ'] = 0\n",
-    "xs['ZH_HToBB_ZToLL'] = 0\n",
-    "xs['ZH_HToBB_ZToNuNu'] = 0\n",
+    "xs['ZH_HToBB_ZToQQ'] = 5.612e-01 * BR_HBB\n",
+    "xs['ZH_HToBB_ZToLL'] = 7.977e-02 * BR_HBB\n",
+    "xs['ZH_HToBB_ZToNuNu'] = 1.573e-01 * BR_HBB\n",
     "\n",
-    "xs['ggZH_HToBB_ZToNuNu'] = 0\n",
-    "xs['ggZH_HToBB_ZToQQ'] = 0\n",
-    "xs['ggZH_HToBB_ZToLL'] = 0\n",
+    "xs['ggZH_HToBB_ZToNuNu'] = 1.222e-02 * BR_HBB\n",
+    "xs['ggZH_HToBB_ZToQQ'] = 4.319e-02 * BR_HBB\n",
+    "xs['ggZH_HToBB_ZToLL'] = 6.185e-03 * BR_HBB\n",
     "    \n",
     "xs['ttHToBB'] = 5.013e-01 * BR_HBB\n",
     "\n",
@@ -146,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "b10cfd5b",
    "metadata": {},
    "outputs": [],
@@ -196,14 +203,23 @@
     "pmap['Zjets'] = ['ZJetsToQQ_HT-400to600', \n",
     "                 'ZJetsToQQ_HT-600to800', \n",
     "                 'ZJetsToQQ_HT-800toInf',\n",
-    "                 'DYJetsToLL_HT-70To100',\n",
-    "                 'DYJetsToLL_HT-100To200', \n",
-    "                 'DYJetsToLL_HT-200To400', \n",
-    "                 'DYJetsToLL_HT-400To600', \n",
-    "                 'DYJetsToLL_HT-600To800', \n",
-    "                 'DYJetsToLL_HT-800To1200'\n",
-    "                 'DYJetsToLL_HT-1200To2500', \n",
-    "                 'DYJetsToLL_HT-2500ToInf']\n",
+    "                 'DYJetsToLL_Pt-50To100',\n",
+    "                 'DYJetsToLL_Pt-100To250',\n",
+    "                 'DYJetsToLL_Pt-250To400',\n",
+    "                 'DYJetsToLL_Pt-400To650',\n",
+    "                 'DYJetsToLL_Pt-650ToInf']\n",
+    "\n",
+    "pmap['ZjetsHT'] = ['ZJetsToQQ_HT-400to600', \n",
+    "                   'ZJetsToQQ_HT-600to800', \n",
+    "                   'ZJetsToQQ_HT-800toInf',\n",
+    "                   'DYJetsToLL_HT-70to100',\n",
+    "                   'DYJetsToLL_HT-100to200',\n",
+    "                   'DYJetsToLL_HT-200to400',\n",
+    "                   'DYJetsToLL_HT-400to600',\n",
+    "                   'DYJetsToLL_HT-600to800',\n",
+    "                   'DYJetsToLL_HT-800to1200',\n",
+    "                   'DYJetsToLL_HT-1200to2500',\n",
+    "                   'DYJetsToLL_HT-2500toInf']\n",
     "\n",
     "pmap['VV'] = ['WW', 'WZ', 'ZZ']\n",
     "\n",
@@ -253,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
