--- a/filesets.ipynb
+++ b/filesets.ipynb
@@ -24,31 +24,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "07c43f29",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mckeys = ['QCD', 'TTbar', 'SingleTop', 'WJetsToQQ', 'WJetsToLNu', 'ZJetsToQQ','DYJetsToLL']\n",
+    "mckeys = ['QCD', \n",
+    "          'TTbar', 'SingleTop', \n",
+    "          'WJetsToQQ', 'WJetsToLNu', \n",
+    "          'ZJetsToQQ', 'DYJetsToLL', \n",
+    "          'Diboson', 'EWKV',\n",
+    "          'VBFHToBB','ttHToBB']\n",
+    "\n",
     "names = mckeys + ['JetHTData','SingleMuData']\n",
     "\n",
     "for year in ['2016APV','2016','2017','2018']:\n",
-    "    keys = mckeys + ['JetHT'+year[0:4], 'SingleMu'+year[0:4]]\n",
+    "\n",
+    "    if 'APV' not in year:\n",
+    "        keys = mckeys + ['JetHT'+year[0:4], 'SingleMu'+year[0:4]]\n",
+    "    else:\n",
+    "        keys = mckeys\n",
+    "\n",
     "\n",
     "    for i,k in enumerate(keys):\n",
+    "\n",
+    "        outfilename = 'infiles/'+year+'_'+names[i]+'.json'\n",
     "        \n",
     "        filelist_redirector = {}\n",
     "        for dataset, files in filelist[year][k].items():\n",
-    "            filelist_redirector[dataset] = [\"root://cmsxrootd.fnal.gov/\" + f for f in files]\n",
-    "        \n",
-    "        with open('infiles/'+year+'_'+names[i]+'.json', 'w') as outfile:\n",
+    "\n",
+    "            if k == 'JetHT2016' or k == 'SingleMu2016':\n",
+    "                if 'HIPM' in dataset:\n",
+    "                    outfilename = 'infiles/2016APV_'+names[i]+'.json'\n",
+    "                    filelist_redirector[dataset] = [\"root://cmsxrootd.fnal.gov/\" + f for f in files] \n",
+    "                elif 'HIPM' not in dataset:\n",
+    "                    filelist_redirector[dataset] = [\"root://cmsxrootd.fnal.gov/\" + f for f in files]       \n",
+    "            else:\n",
+    "                filelist_redirector[dataset] = [\"root://cmsxrootd.fnal.gov/\" + f for f in files]  \n",
+    "                    \n",
+    "        with open(outfilename, 'w') as outfile:\n",
     "            json.dump(filelist_redirector, outfile)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05251aed",
+   "id": "cc32f6cc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -70,7 +91,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
