missing N2DDT map

--- a/xsec-json.ipynb
+++ b/xsec-json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "640b6579",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "a03be12d",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "72c279f2",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
     "# EWK Z\n",
     "xs['EWKZ_ZToQQ'] = 0\n",
     "xs['EWKZ_ZToLL'] = 6.207e+00\n",
-    "xs['EWKZ_ZtoNuNu'] = 1.065e+01\n",
+    "xs['EWKZ_ZToNuNu'] = 1.065e+01\n",
     "\n",
     "# EWK W\n",
     "xs['EWKWminus_WToQQ'] = 0\n",
@@ -131,6 +131,7 @@
     "# Higgs\n",
     "xs['GluGluHToBB_MINLO'] = 4.716e-01 * BR_HBB\n",
     "xs['VBFHToBB'] = 3.873e+00 * BR_HBB\n",
+    "xs['VBFHToBBDipoleRecoilOn'] = xs['VBFHToBB']\n",
     "\n",
     "xs['WminusH_HToBB_WToQQ'] = 0\n",
     "xs['WplusH_HToBB_WToQQ'] = 0\n",
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "b10cfd5b",
    "metadata": {},
    "outputs": [],
@@ -183,10 +184,10 @@
     "                 'TTToSemiLeptonic',\n",
     "                 'TTToSemiLeptonic_ext1']\n",
     "\n",
-    "pmap['SingleTop'] = ['ST_t-channel_antitop_4f_InclusiveDecays', \n",
-    "                     'ST_t-channel_top_4f_InclusiveDecays', \n",
-    "                     'ST_tW_antitop_5f_inclusiveDecays', \n",
-    "                     'ST_tW_top_5f_inclusiveDecays']\n",
+    "pmap['singlet'] = ['ST_t-channel_antitop_4f_InclusiveDecays', \n",
+    "                   'ST_t-channel_top_4f_InclusiveDecays', \n",
+    "                   'ST_tW_antitop_5f_inclusiveDecays', \n",
+    "                   'ST_tW_top_5f_inclusiveDecays']\n",
     "\n",
     "pmap['Wjets'] = ['WJetsToQQ_HT-400to600', \n",
     "                 'WJetsToQQ_HT-600to800', \n",
@@ -230,6 +231,7 @@
     "pmap['ggF'] = ['GluGluHToBB_MINLO']\n",
     "\n",
     "pmap['VBF'] = ['VBFHToBB']\n",
+    "pmap['VBFDipoleRecoilOn'] = ['VBFHToBBDipoleRecoilOn']\n",
     "\n",
     "pmap['WH'] = ['WminusH_HToBB_WToQQ',\n",
     "              'WplusH_HToBB_WToQQ',\n",
@@ -245,8 +247,8 @@
     "    \n",
     "pmap['ttH'] = ['ttHToBB']\n",
     "\n",
-    "pmap['data'] = ['JetHTData']\n",
-    "pmap['muondata'] = ['SingleMuonData']\n",
+    "pmap['data'] = ['JetHT_Run2016F','JetHT_Run2016G','JetHT_Run2016H']\n",
+    "pmap['muondata'] = ['SingleMuon_Run2016F','SingleMuon_Run2016G','SingleMuon_Run2016H']\n",
     "\n",
     "with open('pmap.json', 'w') as outfile:\n",
     "    json.dump(pmap, outfile, indent=4)"
