--- a/filesets.ipynb
+++ b/filesets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "748ed59f",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "995fe03f",
    "metadata": {},
    "outputs": [],
@@ -24,17 +24,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "07c43f29",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QCD 10\n",
+      "TTbar 3\n",
+      "SingleTop 8\n",
+      "WJetsToQQ 3\n",
+      "WJetsToLNu 7\n",
+      "ZJetsToQQ 3\n",
+      "DYJetsToLL 4\n",
+      "Diboson 3\n",
+      "EWKV 4\n",
+      "GluGluHToBB 1\n",
+      "VBFHToBB 2\n",
+      "WHToBB 2\n",
+      "ZHToBB 3\n",
+      "ttHToBB 1\n",
+      "QCD 11\n",
+      "TTbar 3\n",
+      "SingleTop 8\n",
+      "WJetsToQQ 3\n",
+      "WJetsToLNu 8\n",
+      "ZJetsToQQ 2\n",
+      "DYJetsToLL 5\n",
+      "Diboson 3\n",
+      "EWKV 4\n",
+      "GluGluHToBB 1\n",
+      "VBFHToBB 2\n",
+      "WHToBB 2\n",
+      "ZHToBB 3\n",
+      "ttHToBB 1\n",
+      "JetHT2016 8\n",
+      "SingleMu2016 8\n",
+      "QCD 10\n",
+      "TTbar 4\n",
+      "SingleTop 5\n",
+      "WJetsToQQ 3\n",
+      "WJetsToLNu 8\n",
+      "ZJetsToQQ 3\n",
+      "DYJetsToLL 5\n",
+      "Diboson 3\n",
+      "EWKV 4\n",
+      "GluGluHToBB 1\n",
+      "VBFHToBB 1\n",
+      "WHToBB 2\n",
+      "ZHToBB 3\n",
+      "ttHToBB 1\n",
+      "JetHT2017 5\n",
+      "SingleMu2017 5\n",
+      "QCD 10\n",
+      "TTbar 4\n",
+      "SingleTop 5\n",
+      "WJetsToQQ 3\n",
+      "WJetsToLNu 8\n",
+      "ZJetsToQQ 3\n",
+      "DYJetsToLL 5\n",
+      "Diboson 3\n",
+      "EWKV 4\n",
+      "GluGluHToBB 1\n",
+      "VBFHToBB 2\n",
+      "WHToBB 2\n",
+      "ZHToBB 3\n",
+      "ttHToBB 1\n",
+      "JetHT2018 4\n",
+      "SingleMu2018 4\n"
+     ]
+    }
+   ],
    "source": [
     "mckeys = ['QCD', \n",
     "          'TTbar', 'SingleTop', \n",
     "          'WJetsToQQ', 'WJetsToLNu', \n",
     "          'ZJetsToQQ', 'DYJetsToLL', \n",
     "          'Diboson', 'EWKV',\n",
-    "          'VBFHToBB','ttHToBB']\n",
+    "          'GluGluHToBB','VBFHToBB',\n",
+    "          'WHToBB','ZHToBB','ttHToBB']\n",
     "\n",
     "names = mckeys + ['JetHTData','SingleMuData']\n",
     "\n",
@@ -47,6 +117,7 @@
     "\n",
     "\n",
     "    for i,k in enumerate(keys):\n",
+    "        print(k,len(filelist[year][k]))\n",
     "\n",
     "        outfilename = 'infiles/'+year+'_'+names[i]+'.json'\n",
     "        \n",
