add EW Higgs correction notebook

--- a/xsec-json.ipynb
+++ b/xsec-json.ipynb
@@ -113,7 +113,7 @@
     "xs['DYJetsToLL_Pt-650ToInf'] = 4.678e-02\n",
     "\n",
     "# EWK Z\n",
-    "xs['EWKZ_ZToQQ'] = 0\n",
+    "xs['EWKZ_ZToQQ'] = 9.777e+00\n",
     "xs['EWKZ_ZToLL'] = 6.207e+00\n",
     "xs['EWKZ_ZToNuNu'] = 1.065e+01\n",
     "\n",
