fix 2016 data files

--- a/filesets.ipynb
+++ b/filesets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "748ed59f",
    "metadata": {},
    "outputs": [],
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "995fe03f",
+   "execution_count": 6,
+   "id": "e9a2982d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
+   "id": "995fe03f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for k in filelist[\"2016\"].keys():\n",
+    "    if k == 'JetHT2016' or k == 'SingleMu2016':\n",
+    "        filelist[\"2016APV\"][k] = filelist[\"2016\"][k]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "07c43f29",
    "metadata": {},
    "outputs": [
@@ -32,66 +44,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QCD 10\n",
-      "TTbar 3\n",
-      "SingleTop 8\n",
-      "WJetsToQQ 3\n",
-      "WJetsToLNu 7\n",
-      "ZJetsToQQ 3\n",
-      "DYJetsToLL 4\n",
-      "Diboson 3\n",
-      "EWKV 4\n",
-      "GluGluHToBB 1\n",
-      "VBFHToBB 2\n",
-      "WHToBB 2\n",
-      "ZHToBB 4\n",
-      "ttHToBB 1\n",
-      "QCD 11\n",
-      "TTbar 3\n",
-      "SingleTop 8\n",
-      "WJetsToQQ 3\n",
-      "WJetsToLNu 8\n",
-      "ZJetsToQQ 2\n",
-      "DYJetsToLL 5\n",
-      "Diboson 3\n",
-      "EWKV 4\n",
-      "GluGluHToBB 1\n",
-      "VBFHToBB 2\n",
-      "WHToBB 2\n",
-      "ZHToBB 4\n",
-      "ttHToBB 1\n",
+      "ZHToBB 6\n",
       "JetHT2016 8\n",
       "SingleMu2016 8\n",
-      "QCD 10\n",
-      "TTbar 4\n",
-      "SingleTop 5\n",
-      "WJetsToQQ 3\n",
-      "WJetsToLNu 8\n",
-      "ZJetsToQQ 3\n",
-      "DYJetsToLL 5\n",
-      "Diboson 3\n",
-      "EWKV 4\n",
-      "GluGluHToBB 1\n",
-      "VBFHToBB 1\n",
-      "WHToBB 2\n",
-      "ZHToBB 4\n",
-      "ttHToBB 1\n",
+      "ZHToBB 6\n",
+      "JetHT2016 8\n",
+      "SingleMu2016 8\n",
+      "ZHToBB 6\n",
       "JetHT2017 5\n",
       "SingleMu2017 5\n",
-      "QCD 10\n",
-      "TTbar 4\n",
-      "SingleTop 5\n",
-      "WJetsToQQ 3\n",
-      "WJetsToLNu 8\n",
-      "ZJetsToQQ 3\n",
-      "DYJetsToLL 5\n",
-      "Diboson 3\n",
-      "EWKV 4\n",
-      "GluGluHToBB 1\n",
-      "VBFHToBB 2\n",
-      "WHToBB 2\n",
-      "ZHToBB 4\n",
-      "ttHToBB 1\n",
+      "ZHToBB 6\n",
       "JetHT2018 4\n",
       "SingleMu2018 4\n"
      ]
@@ -110,12 +72,8 @@
     "\n",
     "for year in ['2016APV','2016','2017','2018']:\n",
     "\n",
-    "    if 'APV' not in year:\n",
-    "        keys = mckeys + ['JetHT'+year[0:4], 'SingleMu'+year[0:4]]\n",
-    "    else:\n",
-    "        keys = mckeys\n",
-    "\n",
-    "\n",
+    "    keys = mckeys + ['JetHT'+year[:4], 'SingleMu'+year[:4]]\n",
+    "        \n",
     "    for i,k in enumerate(keys):\n",
     "        print(k,len(filelist[year][k]))\n",
     "\n",
@@ -125,14 +83,13 @@
     "        for dataset, files in filelist[year][k].items():\n",
     "\n",
     "            if k == 'JetHT2016' or k == 'SingleMu2016':\n",
-    "                if 'HIPM' in dataset:\n",
-    "                    outfilename = 'infiles/2016APV_'+names[i]+'.json'\n",
-    "                    filelist_redirector[dataset] = [\"root://cmsxrootd.fnal.gov/\" + f for f in files] \n",
-    "                elif 'HIPM' not in dataset:\n",
-    "                    filelist_redirector[dataset] = [\"root://cmsxrootd.fnal.gov/\" + f for f in files]       \n",
+    "                if 'HIPM' in dataset and year == \"2016APV\":\n",
+    "                    filelist_redirector[dataset] = [\"root://cmsxrootd.fnal.gov/\" + f for f in files]\n",
+    "                if 'HIPM' not in dataset and year == \"2016\":\n",
+    "                    filelist_redirector[dataset] = [\"root://cmsxrootd.fnal.gov/\" + f for f in files]\n",
     "            else:\n",
-    "                filelist_redirector[dataset] = [\"root://cmsxrootd.fnal.gov/\" + f for f in files]  \n",
-    "                    \n",
+    "                filelist_redirector[dataset] = [\"root://cmsxrootd.fnal.gov/\" + f for f in files] \n",
+    "           \n",
     "        with open(outfilename, 'w') as outfile:\n",
     "            json.dump(filelist_redirector, outfile)"
    ]
