--- a/filesets.ipynb
+++ b/filesets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "748ed59f",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "e9a2982d",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "995fe03f",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "07c43f29",
    "metadata": {},
    "outputs": [
@@ -44,18 +44,74 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "QCD 10\n",
+      "TTbar 3\n",
+      "SingleTop 8\n",
+      "WJetsToQQ 3\n",
+      "WJetsToLNu 7\n",
+      "ZJetsToQQ 3\n",
+      "DYJetsToLL 4\n",
+      "Diboson 3\n",
+      "EWKV 5\n",
+      "GluGluHToBB 1\n",
+      "VBFHToBB 2\n",
+      "WHToBB 2\n",
       "ZHToBB 6\n",
+      "ttHToBB 1\n",
       "JetHT2016 8\n",
       "SingleMu2016 8\n",
+      "QCD 11\n",
+      "TTbar 3\n",
+      "SingleTop 8\n",
+      "WJetsToQQ 3\n",
+      "WJetsToLNu 8\n",
+      "ZJetsToQQ 2\n",
+      "DYJetsToLL 5\n",
+      "Diboson 3\n",
+      "EWKV 5\n",
+      "GluGluHToBB 1\n",
+      "VBFHToBB 2\n",
+      "WHToBB 2\n",
       "ZHToBB 6\n",
+      "ttHToBB 1\n",
       "JetHT2016 8\n",
       "SingleMu2016 8\n",
+      "QCD 10\n",
+      "TTbar 4\n",
+      "SingleTop 5\n",
+      "WJetsToQQ 3\n",
+      "WJetsToLNu 8\n",
+      "ZJetsToQQ 3\n",
+      "DYJetsToLL 5\n",
+      "Diboson 3\n",
+      "EWKV 4\n",
+      "GluGluHToBB 1\n",
+      "VBFHToBB 1\n",
+      "WHToBB 2\n",
       "ZHToBB 6\n",
+      "ttHToBB 1\n",
       "JetHT2017 5\n",
       "SingleMu2017 5\n",
+      "QCD 10\n",
+      "TTbar 4\n",
+      "SingleTop 5\n",
+      "WJetsToQQ 3\n",
+      "WJetsToLNu 8\n",
+      "ZJetsToQQ 3\n",
+      "DYJetsToLL 5\n",
+      "Diboson 3\n",
+      "EWKV 5\n",
+      "GluGluHToBB 1\n",
+      "VBFHToBB 2\n",
+      "WHToBB 2\n",
       "ZHToBB 6\n",
+      "ttHToBB 1\n",
       "JetHT2018 4\n",
-      "SingleMu2018 4\n"
+      "SingleMu2018 4\n",
+      "dict_keys(['SingleMuon_Run2018A', 'SingleMuon_Run2018B', 'SingleMuon_Run2018C', 'SingleMuon_Run2018D'])\n",
+      "dict_keys(['SingleMuon_Run2018A', 'SingleMuon_Run2018B', 'SingleMuon_Run2018C', 'SingleMuon_Run2018D'])\n",
+      "dict_keys(['SingleMuon_Run2018A', 'SingleMuon_Run2018B', 'SingleMuon_Run2018C', 'SingleMuon_Run2018D'])\n",
+      "dict_keys(['SingleMuon_Run2018A', 'SingleMuon_Run2018B', 'SingleMuon_Run2018C', 'SingleMuon_Run2018D'])\n"
      ]
     }
    ],
