--- a/xsec-json.ipynb
+++ b/xsec-json.ipynb
@@ -129,7 +129,7 @@
     "xs['ZZ'] = 1.214e+01\n",
     "\n",
     "# Higgs\n",
-    "xs['GluGluHToBB_MINLO'] = 4.716e-01 * BR_HBB\n",
+    "xs['GluGluHToBB'] = 4.716e-01 * BR_HBB\n",
     "xs['VBFHToBB'] = 3.873e+00 * BR_HBB\n",
     "xs['VBFHToBBDipoleRecoilOn'] = xs['VBFHToBB']\n",
     "\n",
@@ -228,7 +228,7 @@
     "\n",
     "pmap['EWKW'] = ['EWKWminus_WToQQ','EWKWplus_WToQQ', 'EWKWminus_WToLNu', 'EWKWplus_WToLNu']\n",
     "\n",
-    "pmap['ggF'] = ['GluGluHToBB_MINLO']\n",
+    "pmap['ggF'] = ['GluGluHToBB']\n",
     "\n",
     "pmap['VBF'] = ['VBFHToBB']\n",
     "pmap['VBFDipoleRecoilOn'] = ['VBFHToBBDipoleRecoilOn']\n",
@@ -247,8 +247,45 @@
     "    \n",
     "pmap['ttH'] = ['ttHToBB']\n",
     "\n",
-    "pmap['data'] = ['JetHT_Run2016F','JetHT_Run2016G','JetHT_Run2016H']\n",
-    "pmap['muondata'] = ['SingleMuon_Run2016F','SingleMuon_Run2016G','SingleMuon_Run2016H']\n",
+    "pmap['data'] = [\n",
+    "   'JetHT_Run2016B_ver2_HIPM',\n",
+    "    'JetHT_Run2016C_HIPM',\n",
+    "    'JetHT_Run2016D_HIPM',\n",
+    "    'JetHT_Run2016E_HIPM',\n",
+    "    'JetHT_Run2016F_HIPM',\n",
+    "    'JetHT_Run2016F',\n",
+    "    'JetHT_Run2016G',\n",
+    "    'JetHT_Run2016H',\n",
+    "    'JetHT_Run2017B',\n",
+    "    'JetHT_Run2017C',\n",
+    "    'JetHT_Run2017D',\n",
+    "    'JetHT_Run2017E',\n",
+    "    'JetHT_Run2017F',\n",
+    "    'JetHT_Run2018A', \n",
+    "    'JetHT_Run2018B', \n",
+    "    'JetHT_Run2018C', \n",
+    "    'JetHT_Run2018D'\n",
+    "]\n",
+    "\n",
+    "pmap['muondata'] = [\n",
+    "    'SingleMuon_Run2016B_ver2_HIPM',\n",
+    "    'SingleMuon_Run2016C_HIPM',\n",
+    "    'SingleMuon_Run2016D_HIPM',\n",
+    "    'SingleMuon_Run2016E_HIPM',\n",
+    "    'SingleMuon_Run2016F_HIPM',\n",
+    "    'SingleMuon_Run2016F',\n",
+    "    'SingleMuon_Run2016G',\n",
+    "    'SingleMuon_Run2016H',\n",
+    "    'SingleMuon_Run2017B',\n",
+    "    'SingleMuon_Run2017C',\n",
+    "    'SingleMuon_Run2017D',\n",
+    "    'SingleMuon_Run2017E',\n",
+    "    'SingleMuon_Run2017F',\n",
+    "    'SingleMuon_Run2018A', \n",
+    "    'SingleMuon_Run2018B', \n",
+    "    'SingleMuon_Run2018C', \n",
+    "    'SingleMuon_Run2018D'\n",
+    "]\n",
     "\n",
     "with open('pmap.json', 'w') as outfile:\n",
     "    json.dump(pmap, outfile, indent=4)"
