--- a/xsec-json.ipynb
+++ b/xsec-json.ipynb
@@ -230,8 +230,8 @@
     "\n",
     "pmap['ggF'] = ['GluGluHToBB']\n",
     "\n",
-    "pmap['VBF'] = ['VBFHToBB']\n",
-    "pmap['VBFDipoleRecoilOn'] = ['VBFHToBBDipoleRecoilOn']\n",
+    "pmap['VBFDipoleRecoilOff'] = ['VBFHToBB']\n",
+    "pmap['VBF'] = ['VBFHToBBDipoleRecoilOn']\n",
     "\n",
     "pmap['WH'] = ['WminusH_HToBB_WToQQ',\n",
     "              'WplusH_HToBB_WToQQ',\n",
