--- a/xsec-json.ipynb
+++ b/xsec-json.ipynb
@@ -113,13 +113,13 @@
     "xs['DYJetsToLL_Pt-650ToInf'] = 4.678e-02\n",
     "\n",
     "# EWK Z\n",
-    "xs['EWKZ_ZToQQ'] = 9.777e+00\n",
+    "xs['EWKZ_ZToQQ'] = 9.791e+00\n",
     "xs['EWKZ_ZToLL'] = 6.207e+00\n",
     "xs['EWKZ_ZToNuNu'] = 1.065e+01\n",
     "\n",
     "# EWK W\n",
-    "xs['EWKWminus_WToQQ'] = 0\n",
-    "xs['EWKWplus_WToQQ'] = 0\n",
+    "xs['EWKWminus_WToQQ'] = 1.917e+01\n",
+    "xs['EWKWplus_WToQQ'] = 2.874e+01\n",
     "xs['EWKWminus_WToLNu'] = 3.208e+01\n",
     "xs['EWKWplus_WToLNu'] = 3.909e+01\n",
     "\n",
@@ -133,8 +133,8 @@
     "xs['VBFHToBB'] = 3.873e+00 * BR_HBB\n",
     "xs['VBFHToBBDipoleRecoilOn'] = xs['VBFHToBB']\n",
     "\n",
-    "xs['WminusH_HToBB_WToQQ'] = 0\n",
-    "xs['WplusH_HToBB_WToQQ'] = 0\n",
+    "xs['WminusH_HToBB_WToQQ'] = 3.675e-01 * BR_HBB\n",
+    "xs['WplusH_HToBB_WToQQ'] = 5.890e-01 * BR_HBB\n",
     "xs['WminusH_HToBB_WToLNu'] = 1.770e-01 * BR_HBB\n",
     "xs['WplusH_HToBB_WToLNu'] = 2.832e-01 * BR_HBB\n",
     "\n",
