--- a/filesets.ipynb
+++ b/filesets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "748ed59f",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e9a2982d",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "995fe03f",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "07c43f29",
    "metadata": {},
    "outputs": [
@@ -52,10 +52,10 @@
       "ZJetsToQQ 3\n",
       "DYJetsToLL 4\n",
       "Diboson 3\n",
-      "EWKV 5\n",
+      "EWKV 7\n",
       "GluGluHToBB 1\n",
       "VBFHToBB 2\n",
-      "WHToBB 2\n",
+      "WHToBB 4\n",
       "ZHToBB 6\n",
       "ttHToBB 1\n",
       "JetHT2016 8\n",
@@ -68,10 +68,10 @@
       "ZJetsToQQ 2\n",
       "DYJetsToLL 5\n",
       "Diboson 3\n",
-      "EWKV 5\n",
+      "EWKV 7\n",
       "GluGluHToBB 1\n",
       "VBFHToBB 2\n",
-      "WHToBB 2\n",
+      "WHToBB 4\n",
       "ZHToBB 6\n",
       "ttHToBB 1\n",
       "JetHT2016 8\n",
@@ -84,10 +84,10 @@
       "ZJetsToQQ 3\n",
       "DYJetsToLL 5\n",
       "Diboson 3\n",
-      "EWKV 4\n",
+      "EWKV 6\n",
       "GluGluHToBB 1\n",
-      "VBFHToBB 1\n",
-      "WHToBB 2\n",
+      "VBFHToBB 2\n",
+      "WHToBB 4\n",
       "ZHToBB 6\n",
       "ttHToBB 1\n",
       "JetHT2017 5\n",
@@ -100,18 +100,14 @@
       "ZJetsToQQ 3\n",
       "DYJetsToLL 5\n",
       "Diboson 3\n",
-      "EWKV 5\n",
+      "EWKV 7\n",
       "GluGluHToBB 1\n",
       "VBFHToBB 2\n",
-      "WHToBB 2\n",
+      "WHToBB 4\n",
       "ZHToBB 6\n",
       "ttHToBB 1\n",
       "JetHT2018 4\n",
-      "SingleMu2018 4\n",
-      "dict_keys(['SingleMuon_Run2018A', 'SingleMuon_Run2018B', 'SingleMuon_Run2018C', 'SingleMuon_Run2018D'])\n",
-      "dict_keys(['SingleMuon_Run2018A', 'SingleMuon_Run2018B', 'SingleMuon_Run2018C', 'SingleMuon_Run2018D'])\n",
-      "dict_keys(['SingleMuon_Run2018A', 'SingleMuon_Run2018B', 'SingleMuon_Run2018C', 'SingleMuon_Run2018D'])\n",
-      "dict_keys(['SingleMuon_Run2018A', 'SingleMuon_Run2018B', 'SingleMuon_Run2018C', 'SingleMuon_Run2018D'])\n"
+      "SingleMu2018 4\n"
      ]
     }
    ],
