back up studies

--- a/notebooks/VH_cuflow_nanoaod_2017.ipynb
+++ b/notebooks/VH_cuflow_nanoaod_2017.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 1,
    "id": "33fdf884",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "picklename = \"2017/templates.pkl\""
+    "picklename = \"../vh_combine/2017/templates.pkl\""
    ]
   },
   {
@@ -98,6 +98,44 @@
    "source": [
     "# Read the histogram from the pickle file\n",
     "cutflow_0 = pickle.load(open(picklename,'rb')).integrate('region',['signal'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1a2e8382",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<StringBin (EWKW) instance at 0x7f181075c760>,\n",
+       " <StringBin (EWKZ) instance at 0x7f181075c790>,\n",
+       " <StringBin (QCD) instance at 0x7f1810755220>,\n",
+       " <StringBin (QCDHT) instance at 0x7f18107552e0>,\n",
+       " <StringBin (VBF) instance at 0x7f181075cd90>,\n",
+       " <StringBin (VBFDipoleRecoilOff) instance at 0x7f181075cf70>,\n",
+       " <StringBin (VV) instance at 0x7f181075cac0>,\n",
+       " <StringBin (WH) instance at 0x7f181075ceb0>,\n",
+       " <StringBin (Wjets) instance at 0x7f181075c580>,\n",
+       " <StringBin (ZH) instance at 0x7f181075c5b0>,\n",
+       " <StringBin (Zjets) instance at 0x7f181075cfa0>,\n",
+       " <StringBin (ZjetsHT) instance at 0x7f181075ca90>,\n",
+       " <StringBin (data) instance at 0x7f181071e1c0>,\n",
+       " <StringBin (ggF) instance at 0x7f181075cf40>,\n",
+       " <StringBin (muondata) instance at 0x7f181071e280>,\n",
+       " <StringBin (singlet) instance at 0x7f181075cd60>,\n",
+       " <StringBin (ttH) instance at 0x7f181071e130>,\n",
+       " <StringBin (ttbar) instance at 0x7f181075cc40>]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cutflow_0.axis('process').identifiers()"
    ]
   },
   {
