--- a/notebooks/VH_optimize_sign_ddb_ddc_1.ipynb
+++ b/notebooks/VH_optimize_sign_ddb_ddc_1.ipynb
@@ -918,7 +918,7 @@
     "        \n",
     "        print(\"===========\")\n",
     "            \n",
-    "        \n",
+    "#TODO: print S and B for each of the blocks\n",
     "        \n",
     "read_sign_from_scan()"
    ]
