--- a/notebooks/VH_optimize_sign_ddb_ddc_1.ipynb
+++ b/notebooks/VH_optimize_sign_ddb_ddc_1.ipynb
@@ -95,7 +95,7 @@
     }
    ],
    "source": [
-    "templates.sum(*['ddb1', 'ddc2'])"
+    "#templates.sum(*['ddb1', 'ddc2'])"
    ]
   },
   {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d77de4a3",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "872c90df",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "7ee01989",
    "metadata": {},
    "outputs": [
@@ -323,6 +323,47 @@
     "plt.xlabel('DDC2 Cut')\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f50ab760",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.        , 0.001     , 0.00107227, 0.00114976, 0.00123285,\n",
+       "       0.00132194, 0.00141747, 0.00151991, 0.00162975, 0.00174753,\n",
+       "       0.00187382, 0.00200923, 0.00215443, 0.00231013, 0.00247708,\n",
+       "       0.00265609, 0.00284804, 0.00305386, 0.00327455, 0.00351119,\n",
+       "       0.00376494, 0.00403702, 0.00432876, 0.00464159, 0.00497702,\n",
+       "       0.0053367 , 0.00572237, 0.00613591, 0.00657933, 0.0070548 ,\n",
+       "       0.00756463, 0.00811131, 0.00869749, 0.00932603, 0.01      ,\n",
+       "       0.01072267, 0.01149757, 0.01232847, 0.01321941, 0.01417474,\n",
+       "       0.01519911, 0.01629751, 0.01747528, 0.01873817, 0.02009233,\n",
+       "       0.02154435, 0.0231013 , 0.02477076, 0.02656088, 0.02848036,\n",
+       "       0.03053856, 0.03274549, 0.03511192, 0.03764936, 0.04037017,\n",
+       "       0.04328761, 0.04641589, 0.04977024, 0.05336699, 0.05722368,\n",
+       "       0.06135907, 0.06579332, 0.07054802, 0.07564633, 0.08111308,\n",
+       "       0.0869749 , 0.09326033, 0.1       , 0.10722672, 0.1149757 ,\n",
+       "       0.12328467, 0.13219411, 0.14174742, 0.15199111, 0.16297508,\n",
+       "       0.17475284, 0.18738174, 0.2009233 , 0.21544347, 0.23101297,\n",
+       "       0.24770764, 0.26560878, 0.28480359, 0.30538555, 0.32745492,\n",
+       "       0.35111917, 0.37649358, 0.40370173, 0.43287613, 0.46415888,\n",
+       "       0.49770236, 0.53366992, 0.57223677, 0.61359073, 0.65793322,\n",
+       "       0.70548023, 0.75646333, 0.81113083, 0.869749  , 0.93260335,\n",
+       "       1.        ])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "templates.axis('ddc2').edges()"
    ]
   },
   {
